修改活動頁內容

--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -121,7 +121,8 @@
                                     <tr>
                                         <td>獎項內容：<br>
                                         台灣大車隊－50元搭車金（10,000名）<br>
-                                        LINE TAXI－50元乘車券（10,000名）
+                                        LINE TAXI－50元乘車券（10,000名）<br>
+                                        <span class="text-remark">獎項限於桃園地區使用。</span>
                                         <br>
                                         <br>
                                         參加條件：<br>加入<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>，完成註冊者。<br>
@@ -137,10 +138,11 @@
                                         <td>活動獎項：<br>
                                         台灣大車隊－30天100元搭車金（50名）<br>
                                         LINE TAXI－30天100元乘車券（50名）<br>
+                                        <span class="text-remark">獎項限於桃園地區使用。</span><br>
                                         <br>
                                         參加條件：<br>
                                         加入<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>，完成註冊之市民卡持卡人。<br>
-                                        <span class="text-remark">資料請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的參加資格。<br>
+                                        <span class="text-remark">資料請務必確實填寫，若資料錯誤或不符以致系統無法驗證身分，將影響您的參加資格。
                                         透過「虎你好運抽紅包」活動註冊者，仍擁有抽獎資格。</span></td>
                                     </tr>
                                 </table>
