新增影片區塊

--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -109,6 +109,12 @@
                 <section class="event-content">
                     <div class="card">
                         <div class="info" id="goThe01">
+                            <h5>安心乘車HAPPY購</h5>
+                            <div class="video-box">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/g4-gnVWLD2s" title="YouTube video player"
+                                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                        allowfullscreen></iframe>
+                            </div>
                             <h5>活動期間</h5>
                             <p>截至3/31（四）23:59止，逾時恕不受理。</p>
 
