調整+補充內文

--- a/iiot/taoyuang1000/rewards-card/index.html
+++ b/iiot/taoyuang1000/rewards-card/index.html
@@ -15,31 +15,43 @@
                 <img class="mob" src="images/main-title-s.png" alt="智慧永續 桃園領航 集點卡" width="100%">
             </div>
             <ul class="peach clearfix">
-                <li class="photo img-show">
+                <li class="img-show">
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png"">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
                 </li>
-                <li class="photo">
+                <li>
                     <img src="images/grid.png">
+                </li>
+                <li class="mob-show">
+                    <img src="images/bg-peach-icon.png">
                 </li>
             </ul>
+            <div class="event-info">
+                <h3>/ 2022智慧城市展 /</h3>
+                <p>展出日期：2022年3月22日（二）至3月25日（五）<br>
+                展出地點：台北南港展覽館2館（台北市南港區經貿二路2號）<br>
+                展出時間：10:00－18:00（3月25日僅至17:00）<br>
+                兌換獎品：精美小禮物<br>
+                兌換數量：依據現場獎品數量狀況派發，送完為止！<br>
+                兌換方法：掃描QR CODE或輸入LINE ID：@TYCC，加入「桃園市民卡」官方LINE好友、到桃園市八大展區掃描QR CODE集章8枚，即可向工作人員兌換獎品。</p>
+            </div>
         </section>
     </main>
 </body>
