--- a/iiot/taoyuang1000/rewards-card/index.html
+++ b/iiot/taoyuang1000/rewards-card/index.html
@@ -9,11 +9,15 @@
 <body>
     <main class="container">
         <div class="bg-icon"></div>
+        <div class="fixed-note">
+            <p>參加活動請使用 LINE 的掃碼功能掃描 QRcode</p>
+        </div>
         <section class="content">
             <div class="title">
                 <img class="pc" src="images/main-title.png" alt="智慧永續 桃園領航 集點卡" width="100%">
                 <img class="mob" src="images/main-title-s.png" alt="智慧永續 桃園領航 集點卡" width="100%">
             </div>
+            <p class="sub-text">（您已領取 1 個獎勵）</p>
             <ul class="peach clearfix">
                 <li class="img-show">
                     <img src="images/grid.png">
