--- a/iiot/taoyuang1000/rewards-card/index.html
+++ b/iiot/taoyuang1000/rewards-card/index.html
@@ -10,7 +10,8 @@
     <main class="container">
         <div class="bg-icon"></div>
         <div class="fixed-note">
-            <p>參加活動請使用 LINE 的掃碼功能掃描 QRcode</p>
+            <p>參加活動請使用 LINE 的掃碼功能<Br>掃描 QRcode</p>
+            <button class="btn">領取獎勵</button>
         </div>
         <section class="content">
             <div class="title">
