多一顆 取消  按鈕

--- a/iiot/taoyuang1000/rewards-card/popup.html
+++ b/iiot/taoyuang1000/rewards-card/popup.html
@@ -22,7 +22,10 @@
                         <div class="popup-container">
                             <p class="maintitle">確認兌換獎勵</p>
                             <p class="text-info">請工作人員操作確認領取</p>
-                            <button class="btn">兌換</button>
+                            <div class="both-btn">
+                                <button class="btn">兌換</button>
+                                <button class="btn bg-gray">取消</button>
+                            </div>
                         </div>
                         <button title="Close (Esc)" type="button" class="mfp-close">×</button>
                     </section>
