--- a/iiot/taoyuang1000/rewards-card-greenlife/popup.html
+++ b/iiot/taoyuang1000/rewards-card-greenlife/popup.html
@@ -39,9 +39,8 @@
                 <button class="btn">領取獎勵</button>
             </div>
             <section class="content">
-                <div class="title">
-                    <img class="pc" src="images/main-title.png" alt="智慧永續 桃園領航 集點卡" width="100%">
-                    <img class="mob" src="images/main-title-s.png" alt="智慧永續 桃園領航 集點卡" width="100%">
+               <div class="title">
+                    <img src="images/main-title.png" alt="綠色生活悠遊節" width="100%">
                 </div>
                 <p class="sub-text">（您已領取 1 個獎勵）</p>
                 <ul class="peach clearfix">
