更新活動內容

--- a/iiot/taoyuang1000/rewards-card-greenlife/index.html
+++ b/iiot/taoyuang1000/rewards-card-greenlife/index.html
@@ -41,13 +41,10 @@
                         <p><span class="l-title">活動地點</span>桃園區音樂之林公園(春日路及民光東路交叉路口)</p>
                     </li>
                     <li>
-                        <p><span class="l-title">活動時間</span>中午12：20 ~ 12：40集合</p>
+                        <p><span class="l-title">活動時間</span>111年4月10日(日)13:00~16:30，參加者請於12:20前到活動會場報到。</p>
                     </li>
                     <li>
-                        <p><span class="l-title">集章方法</span>掃描QR CODE或輸入LINE ID：@TYCC，加入「桃園市民卡」官方LINE好友、到桃園市八大展區掃描QR CODE集章8枚，即可向工作人員兌換獎品。</p>
-                    </li>
-                    <li>
-                        <p><span class="l-title">集章地點</span>音樂之林公園、三民公園、南平公園、光明公園。</p>
+                        <p><span class="l-title">集章方法</span>掃描QR CODE或輸入LINE ID：@TYCC，加入「桃園市民卡」官方LINE好友、到集章地點掃描QR CODE集章4枚，即可向工作人員兌換獎品。</p>
                     </li>
                     <li>
                         <p><span class="l-title">任務規則</span></p>
@@ -62,6 +59,9 @@
                                 <p>悠遊獎：沿途以手機掃描集滿4個集章點，送環保好禮一份、市集劵50元及自行車LED燈組。</p>
                             </li>
                         </ul>
+                    </li>
+                    <li>
+                        <p><span class="l-title">集章地點</span>音樂之林公園、三民公園、南平公園、光明公園。</p>
                     </li>
                     <li>
                         <p><span class="l-title">兌換地點</span>環保好禮請至「音樂之林公園綠色消費政策宣導攤位」領取；市集劵50元及自行車LED燈組請至「光明河濱公園服務台」領取。</p>
