--- a/iiot/taoyuang1000/register/index-queen-done.html
+++ b/iiot/taoyuang1000/register/index-queen-done.html
@@ -19,18 +19,22 @@
                 <div class="img">
                     <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
-                <h1 class="subtitle">
-                    親愛的桃園市民
+                <h1 class="maintitle">
+                    滿千折百活動登錄
                 </h1>
-                <p class="text-info">恭喜您獲得紅包 XXX元<br>
+                <h3 class="subtitle">
+                    <span>您已登陸活動</span>
+                    一卡通聯名卡<br>
+                    /JA80T7Q
+                </h3>
+                <!-- <p class="text-info">恭喜您獲得紅包 XXX元<br>
                     <br>
                     請於2022.12.31前開啟下方兌換券網址並輸入（密碼XXXX）至全家店鋪兌換全家購物金XXX元。<br>
                     <a class="btn-style btn-green" href="https://fami.life/s/4ajkng" target="_blank">得獎查詢</a>
                 </p>
                 <p class="text-info">持續關注官方Line帳號，掌握活動最新訊息。</p>
-                <!-- 看要不要放↓ -->
                 <a class="btn-style" href="#">活動詳情請洽官網</a>
-                <button class="btn-style btn-out">登出</button>
+                <button class="btn-style btn-out">登出</button> -->
             </section>
         </main>
         <footer class="footer">
