--- a/iiot/taoyuang1000/rewards-card-queen/popup.html
+++ b/iiot/taoyuang1000/rewards-card-queen/popup.html
@@ -40,7 +40,7 @@
             </div>
             <section class="content">
                <div class="title">
-                    <img src="images/main-title.png" alt="綠色生活悠遊節" width="100%">
+                    <img src="images/banner-01.jpg" alt="卡好女王節" width="100%">
                 </div>
                 <p class="sub-text">（您已領取 1 個獎勵）</p>
                 <ul class="peach clearfix">
