稍微比例放大點~

--- a/iiot/taoyuang1000/join-tycg/index.html
+++ b/iiot/taoyuang1000/join-tycg/index.html
@@ -20,7 +20,7 @@
                 <div class="logo"></div>
                 <h1 class="maintitle">桃園市民卡</h1>
                 <div class="middle-box">
-                    <h2 class="subtitle">一句標語 一句標語</h2>
+                    <h2 class="subtitle">買得優惠、買得愉快<br>做自已的女王，盡情寵愛自己！</h2>
                     <p>桃園市政府</p>
                 </div>
                 <button class="btn-default btn-linelogin">與LINE連動</button>
