更新活動內容

--- a/iiot/taoyuang1000/rewards-card-queen/index.html
+++ b/iiot/taoyuang1000/rewards-card-queen/index.html
@@ -35,43 +35,47 @@
                 </li>
             </ul>
             <div class="event-info">
-                <h3>/ 桃園市民卡－卡好女王節 /</h3>
+                <h3>【桃園市民卡－卡好女王節 x 在地百貨 】</h3>
+                <h4 class="f-pink">消費滿2000送200，再送超值來店禮！</h4>
                 <ul>
                     <li>
-                        <p><span class="l-title">活動簡介</span>歡慶母親節，桃園市民卡結合三大支付工具（悠遊卡、一卡通Money、第一銀行）推出「消費滿千送百」超值回饋，4月18日至5月4日至市民卡官方LINE帳號註冊、登錄，即有機會抽中回饋名額。除外，更聯合多家百貨業者推出專屬好康，只要出示市民卡LINE即享品牌優惠折扣及來店禮，消費兩千再送兩百元百貨禮券，讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！</p>
+                        <p><span class="l-title">活動簡介</span>歡慶母親節，桃園市民卡聯合百貨業者推出專屬好康，
+                        出示桃園市民卡官方LINE帳號即享優惠折扣或來店禮，
+                        憑消費2,000元發票，再送200元百貨禮券，
+                        讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！</p>
                     </li>
                     <li>
-                        <p><span class="l-title">活動日期</span>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
+                        <p><span class="l-title">活動1－消費兩千送兩百</span></p>
+                        <ul class="nb">
+                            <li>
+                                <p>桃園市民於<a href="https://lin.ee/0lv1T1e" target="_blank">桃園市民卡官方LINE帳號</a>完成註冊。</p>
+                            </li>
+                            <li>
+                                <p>服務台出示市民卡LINE「註冊/登錄」頁面及當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（數量限量，送完為止）</p>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <p><span class="l-title">活動辦法</span></p>
-                        <p class="f-b">【百貨專屬折扣，消費兩千送兩百】</p>
+                        <p><span class="l-title">活動2－來店禮兌換</span></p>
                         <ul class="nb">
                             <li>
-                                <p>出示桃園市民卡官方LINE帳號，享合作百貨旗下品牌專屬優惠。</p>
+                                <p>桃園市民於<a href="https://lin.ee/0lv1T1e" target="_blank">桃園市民卡官方LINE帳號</a>完成註冊。</p>
                             </li>
                             <li>
-                                <p>於合作百貨服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（數量有限，送完為止）。</p>
-                                <p>※ 營業時間及活動名額，請依各合作百貨門市公告為主。</p>
+                                <p>服務台出示市民卡LINE「註冊/登錄」頁面， 即可掃描現場QRCODE，兌換百貨來店禮（數量限量，送完為止）</p>
+                                <p class="t-red">※ 本活動非每家百貨業者參與，參與名單請至活動網頁查詢。</p>
                             </li>
                         </ul>
-                        <p class="f-b">【三大支付，滿千送百】</p>
-                        <p class="f-pink">參加對象：</p>
+                    </li>
+                    <li>
+                        <p><span class="l-title">活動3－旗下品牌優惠</span></p>
                         <ul class="nb">
                             <li>
-                                <p>桃園市民卡悠遊卡（ 50,000名）、桃園市民卡一卡通（20,000名）</p>
+                                <p>桃園市民於<a href="https://lin.ee/0lv1T1e" target="_blank">桃園市民卡官方LINE帳號</a>完成註冊</p>
                             </li>
                             <li>
-                                <p>第一銀行桃園認同卡、市民卡聯名卡用戶（2,000名）</p>
-                            </li>
-                        </ul>
-                        <p class="f-pink">參加步驟：</p>
-                        <ul class="nb">
-                            <li>
-                                <p>5月4日前，至桃園市民卡LINE官方帳號完成註冊及活動登錄。</p>
-                            </li>
-                            <li>
-                                <p>公布名單後，即可於5月6日至6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通Money、第一銀行）進行消費，消費滿千元即會於次月獲得百元回饋金。</p>
+                                <p>至旗下品牌消費出示市民卡LINE「註冊/登錄」頁面或實體卡片，即享旗下品牌優惠折扣。</p>
+                                <p class="t-red">※ 優惠品牌請參考活動網頁，並依百貨業者現場公告為主詢。</p>
                             </li>
                         </ul>
                     </li>
@@ -79,10 +83,10 @@
                         <p><span class="l-title">注意事項</span></p>
                         <ul class="nb">
                             <li>
-                                <p>如需洽詢兌獎及活動相關事宜，請將問題及相關截圖寄送至<a href="mailto:">客服信箱</a>，或於上班時間（平日8:00-17:00）撥打客服專線03-3322107 由專人為您服務。</p>
+                                <p>如需洽詢活動事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，或於上班時間（平日8:00-17:00）撥打客服專線03-3322107 由專人為您服務。</p>
                             </li>
                             <li>
-                                <p>活動官網：<a target="_blank" href="#">點選前往官網</a></p>
+                                <p>各家百貨「來店禮兌換」及「旗下品牌優惠」相關訊息，請至<a target="_blank" href="https://taoyuan1000.tycg.gov.tw/">活動網頁</a>查看詳請。</p>
                             </li>
                         </ul>
                     </li>
