--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -87,7 +87,9 @@
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="/app/privacy">回首頁</a></li>
+                    <li><a href="#">中獎名單下載</a></li>
+                    <li class="go-section-01">活動辦法</li>
+                    <li><a href="/app/privacy">隱私權及安全政策</a></li>
                     <li><a href="/envelope">虎你好運抽紅包</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
