更新活動內容

--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -95,22 +95,67 @@
                 <section class="event-content" id="goThe01">
                     <div class="card">
                          <div class="main-introductio">
-                            <h3 class="sub-title"><span>JC PARK食尚廣場<br>
+                            <h3 class="sub-title">
+                                <span class="bg-pink">JC PARK食尚廣場<br>
                                 桃園春日館、中壢中正館</span>
-                                </h3>
+                            </h3>
                             <div class="info">
                                 <br>
                                 <h5>活動時間</h5>
-                                <p>4/18(一) - 4/24(日)</p>
+                                <p>111/4/18（一）－5/1（日）</p>
                                 <h5>活動地點</h5>
                                 <p>春日館：桃園市桃園區春日路618號<br>
                                 中正館：桃園市中壢區中正路51號</p>
                                 <h5>活動辦法&獎項</h5>
                             </div>
                         </div>
-                        <table class="table-style" border="0" cellpadding="0" cellspacing="0">
+                        <table class="table-style pc-show" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <th width="50%">消費滿兩千兌換兩百元</th>
+                                <th>來店禮兌換</th>
+                            </tr>
+                            <tr>
+                                <td class="info">
+                                    <ul class="list">
+                                        <li>
+                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
+                                        </li>
+                                        <li>
+                                            <p>服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（每館限量100份，送完為止）。</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                                <td class="info">
+                                    <ul class="list">
+                                        <li>
+                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
+                                        </li>
+                                        <li>
+                                            <p>服務台出示「註冊/登錄」頁面，即可兌換口袋隨行杯（每館限量30份，送完為止）。</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                        
+                        <table class="table-style mob-show" border="0" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <th width="50%">消費滿兩千兌換兩百元</th>
+                            </tr>
+                            <tr>
+                                <td class="info">
+                                    <ul class="list">
+                                        <li>
+                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
+                                                    target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
+                                        </li>
+                                        <li>
+                                            <p>服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（每館限量100份，送完為止）。</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
                                 <th>來店禮兌換</th>
                             </tr>
                             <tr>
@@ -121,18 +166,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元<br>（每館限量150份，送完為止）。</p>
-                                        </li>
-                                    </ul>
-                                </td>
-                                <td class="info">
-                                    <ul class="list">
-                                        <li>
-                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
-                                                    target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
-                                        </li>
-                                        <li>
-                                            <p>服務台出示「註冊/登錄」頁面，即可兌換口袋隨身杯。</p>
+                                            <p>服務台出示「註冊/登錄」頁面，即可兌換口袋隨行杯（每館限量30份，送完為止）。</p>
                                         </li>
                                     </ul>
                                 </td>
@@ -140,7 +174,9 @@
                         </table>
                     </div>
                     <div class="card">
-                        <h3 class="sub-title"><span>旗下品牌優惠</span></h3>
+                        <h3 class="sub-title">
+                            <span class="bg-pink">旗下品牌優惠</span>
+                        </h3>
                         <div class="info">
                             <ul class="store-logo clearfix">
                                 <li>
