--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -107,7 +107,9 @@
                 <section class="event-content" id="goThe01">
                     <div class="card">
                          <div class="main-introductio">
-                            <h3 class="sub-title"><span>桃園市民卡－卡好女王節</span></h3>
+                            <h3 class="sub-title">
+                                <span class="bg-pink">桃園市民卡－卡好女王節</span>
+                            </h3>
                             <div class="info">
                                 <h5>活動期間</h5>
                                 <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
@@ -117,12 +119,10 @@
                         </div>
                     </div>
                     <div class="card">
-                        <h3 class="sub-title"><span>百貨滿兩千送兩百，再送超值來店禮！</span></h3>
-                        <p class="text-remark">※ 營業時間及活動名額，請依各合作百貨門市公告為主。</p>
-                        <div class="info">
-                            <p>1. 出示桃園市民卡官方LINE帳號，享合作百貨旗下品牌專屬優惠。<br>
-                            2. 於合作百貨服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（數量有限，送完為止）。</p>
-                        </div>
+                        <h3 class="sub-title">
+                            <span class="bg-pink">百貨滿兩千送兩百<span class="no-block">，</span><span class="br">再送超值來店禮！</span></span>
+                        </h3>
+                        <h4 class="hot-title">消費2000送200 / 來店禮兌換 / <span>旗下品牌優惠</span> </h4>
                         <ul class="store-card clearfix">
                             <li>
                                 <a class="store-photo" href="date-01.html" target="_blank">
@@ -130,12 +130,6 @@
                                 </a>
                                 <p>JC PARK食尚廣場</p>
                             </li>
-                            <!-- <li>
-                                <a class="store-photo" href="date-02.html" target="_blank">
-                                    <img src="images/img_store_01.png" alt="JC PARK食尚廣場 桃園春日館">
-                                </a>
-                                <p>JC PARK食尚廣場<span>桃園春日館</span></p>
-                            </li> -->
                             <li>
                                 <a class="store-photo" target="_blank">
                                     <img src="images/img_store_commingsoon.png" alt="新光三越桃園 站前店">
@@ -167,9 +161,12 @@
                                 <p>comming soon...</p>
                             </li>
                         </ul>
+                        <p class="text-remark">※ 營業時間及活動名額，請依各合作百貨門市公告為主。</p>
                     </div>
                     <div class="card">
-                        <h3 class="sub-title"><span>三大支付滿千送百</span></h3>
+                        <h3 class="sub-title">
+                            <span class="bg-pink">三大支付滿千送百</span>
+                        </h3>
                         <div class="info">
                             <h5>參加對象</h5>
                             <ul class="list">
@@ -177,7 +174,7 @@
                                     <p>桃園市民卡悠遊卡（ 50,000名）、桃園市民卡一卡通（20,000名）</p>
                                 </li>
                                 <li>
-                                    <p>第一銀行桃園認同卡、市民卡聯名卡用戶（2,000名）</p>
+                                    <p>第一銀行桃園認同卡、市民卡聯名卡用戶（共計2,000名）</p>
                                 </li>
                             </ul>
                             <h5>參加步驟</h5>
@@ -189,6 +186,22 @@
                                     <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通Money、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
                                 </li>
                             </ul>
+                            <h5>活動時程</h5>
+                            <table class="table-style" border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <th width="20%">開放登記</th>
+                                    <th width="20%">抽獎</th>
+                                    <th width="20%">名單公布</th>
+                                    <th width="20%">消費期間</th>
+                                    <th width="20%">消費回饋</th>
+                                </tr>
+                                <td align="center">4月18日（一）<br>至5月4日（三）</td>
+                                <td align="center">5月5日（四）</td>
+                                <td align="center">5月6日（五）</td>
+                                <td align="center">5月6日（五）<br>至6月5日（日）</td>
+                                <td align="center">七月底前</td>
+                                </tr>
+                            </table>
                             <table class="table-style pc-show" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <th>支付業者</th>
@@ -200,9 +213,9 @@
                                     <td align="center">認列範圍<span>消費限制</span></td>
                                     <td align="center">無特殊限制</td>
                                     <td>認列範圍：<br>
-                                    (1) 一般消費：通路線上/線下交易（我的條碼/掃描）<br>
-                                    (2) 乘車碼：桃園捷運、公車、高雄捷運<br>
-                                    (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等
+                                    (1) 一般消費：通路線上/線下交易（我的條碼/掃描）。<br>
+                                    (2) 乘車碼：桃園捷運、公車、高雄捷運。<br>
+                                    (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等。
                                     </td>
                                     <td align="center">
                                         <span class="text-remark">一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值</span>
@@ -211,14 +224,14 @@
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image1.png" target="_blank"><img class="img-card-example" src="images/image1.png" width="100%"></a>
-                                    </td>
-                                    <td align="center">
                                         <a href="images/image2.png" target="_blank"><img class="img-card-example" src="images/image2.png" width="100%"></a>
                                     </td>
                                     <td align="center">
-                                        <a href="images/image3.png" target="_blank"><img class="img-card-example" src="images/image3.png" width="100%"></a>
                                         <a href="images/image4.png" target="_blank"><img class="img-card-example" src="images/image4.png" width="100%"></a>
+                                    </td>
+                                    <td align="center">
+                                        <a href="images/image1.png" target="_blank"><img class="img-card-example" src="images/image1.png" width="100%"></a>
+                                        <a href="images/image3.png" target="_blank"><img class="img-card-example" src="images/image3.png" width="100%"></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -240,7 +253,7 @@
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image1.png" target="_blank"><img class="img-card-example" src="images/image1.png" width="100%"></a>
+                                        <a href="images/image2.png" target="_blank"><img class="img-card-example" src="images/image2.png" width="100%"></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -253,15 +266,15 @@
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
                                     <td>認列範圍：<br>
-                                        (1) 一般消費：通路線上/線下交易（我的條碼/掃描）<br>
-                                        (2) 乘車碼：桃園捷運、公車、高雄捷運<br>
-                                        (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等
+                                        (1) 一般消費：通路線上/線下交易（我的條碼/掃描）。<br>
+                                        (2) 乘車碼：桃園捷運、公車、高雄捷運。<br>
+                                        (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等。
                                     </td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image2.png" target="_blank"><img class="img-card-example" src="images/image2.png"
+                                        <a href="images/image4.png" target="_blank"><img class="img-card-example" src="images/image4.png"
                                                 width="100%"></a>
                                     </td>
                                 </tr>
@@ -281,9 +294,9 @@
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image3.png" target="_blank"><img class="img-card-example" src="images/image3.png"
+                                        <a href="images/image1.png" target="_blank"><img class="img-card-example" src="images/image1.png"
                                                 width="100%"></a>
-                                        <a href="images/image4.png" target="_blank"><img class="img-card-example" src="images/image4.png"
+                                        <a href="images/image3.png" target="_blank"><img class="img-card-example" src="images/image3.png"
                                                 width="100%"></a>
                                     </td>
                                 </tr>
@@ -292,26 +305,12 @@
                                     <td align="center">02-2173-2999</td>
                                 </tr>
                             </table>
-                            <h5>活動時程</h5>
-                            <table class="table-style" border="0" cellpadding="0" cellspacing="0">
-                                <tr>
-                                    <th width="20%">開放登記</th>
-                                    <th width="20%">抽獎</th>
-                                    <th width="20%">名單公布</th>
-                                    <th width="20%">消費期間</th>
-                                    <th width="20%">消費回饋</th>
-                                </tr>
-                                    <td align="center">4月18日（一）<br>至5月4日（三）</td>
-                                    <td align="center">5月5日（四）</td>
-                                    <td align="center">5月6日（五）</td>
-                                    <td align="center">5月6日（五）<br>至6月5日（日）</td>
-                                    <td align="center">七月底前</td>
-                                </tr>
-                            </table>
                         </div>
                     </div>
                     <div class="card">
-                        <h3 class="sub-title"><span>注意事項</span></h3>
+                        <h3 class="sub-title">
+                            <span class="bg-pink">注意事項</span>
+                        </h3>
                         <div class="note">
                             <ul>
                                 <li>
