換解析度高一點的banner

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -100,7 +100,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="/app/register"><img src="images/share-pic-queen.jpg" title="桃園市民卡－卡好女王節" width="100%"></a>
+                            <a href="/app/register"><img src="images/main-banner.jpg" title="桃園市民卡－卡好女王節" width="100%"></a>
                         </div>
                     </div>
                 </section>
