--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -88,7 +88,7 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="/app/register"><img src="images/share-pic-queen.jpg" title="桃園市民卡－卡好女王節" width="100%"></a>
+                            <a href="/app/register"><img src="images/main-bannerjpg" title="桃園市民卡－卡好女王節" width="100%"></a>
                         </div>
                     </div>
                 </section>
