--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -59,7 +59,7 @@
         <div class="pushy-content">
             <ul>
                 <li class="pushy-link">
-                    <a href="#">回首頁</a>
+                    <a href="https://taoyuan1000.tycg.gov.tw/">回首頁</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -78,7 +78,7 @@
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#">回首頁</a></li>
+                    <li><a href="https://taoyuan1000.tycg.gov.tw/">回首頁</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
@@ -88,7 +88,14 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="/app/register"><img src="images/main-bannerjpg" title="桃園市民卡－卡好女王節" width="100%"></a>
+                            <a href="/app/register">
+                                <img src="images/main-banner-0413.png" title="桃園市民卡－卡好女王節" width="100%">
+                            </a>
+                        </div>
+                        <div class="i-b">
+                            <a href="/app/register">
+                                <img src="images/main-banner-2.png" title="三大支付滿千送百，在地百貨滿兩千送兩百" width="100%">
+                            </a>
                         </div>
                     </div>
                 </section>
