--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -58,9 +58,9 @@
     <nav class="pushy pushy-left" data-focus="#first-link">
         <div class="pushy-content">
             <ul>
-                <li class="pushy-link">
+                <!-- <li class="pushy-link">
                     <a href="#">中獎名單下載</a>
-                </li>
+                </li> -->
                 <li class="pushy-link">
                     <a class="go-section-01">活動辦法</a>
                 </li>
@@ -69,6 +69,9 @@
                 </li>
                 <li class="pushy-link">
                     <a href="/envelope">虎你好運抽紅包</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="/taxi">安心乘車HAPPY購</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -87,10 +90,11 @@
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#">中獎名單下載</a></li>
+                    <!-- <li><a href="#">中獎名單下載</a></li> -->
                     <li class="go-section-01">活動辦法</li>
                     <li><a href="/app/privacy">隱私權及安全政策</a></li>
                     <li><a href="/envelope">虎你好運抽紅包</a></li>
+                    <li><a href="/taxi">安心乘車HAPPY購</a></li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
@@ -100,7 +104,14 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <a href="/app/register"><img src="images/main-banner.jpg" title="桃園市民卡－卡好女王節" width="100%"></a>
+                            <a href="/app/register">
+                                <img src="images/main-banner-0413.png" title="桃園市民卡－卡好女王節" width="100%">
+                            </a>
+                        </div>
+                        <div class="i-b">
+                            <a href="/app/register">
+                                <img src="images/main-banner-2.png" title="三大支付滿千送百，在地百貨滿兩千送兩百" width="100%">
+                            </a>
                         </div>
                     </div>
                 </section>
@@ -110,11 +121,13 @@
                             <h3 class="sub-title">
                                 <span class="bg-pink">桃園市民卡－卡好女王節</span>
                             </h3>
+                            <h4 class="hot-title pa-01">三大支付 x 在地百貨 <span>狂撒近千萬元好康優惠</span></h4>
                             <div class="info">
                                 <h5>活動期間</h5>
                                 <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
                                 <h5>活動簡介</h5>
-                                <p>歡慶母親節，桃園市民卡結合三大支付工具（悠遊卡、一卡通Money、第一銀行）推出「消費滿千送百」超值回饋，4月18日至5月4日至市民卡官方LINE帳號註冊、登錄，即有機會抽中回饋名額。除外，更聯合多家百貨業者推出專屬好康，只要出示市民卡LINE即享品牌優惠折扣及來店禮，消費兩千再送兩百元百貨禮券，讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！</p>
+                                <p>歡慶母親節，市民卡要讓你買得優惠、買得愉快，盡情寵愛自己！
+                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/8－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                             </div>
                         </div>
                     </div>
