更新子頁面的banner

--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="i-b">
                             <a href="/app/register">
-                                <img src="images/main-banner-2.png" title="三大支付滿千送百，在地百貨滿兩千送兩百" width="100%">
+                                <img src="images/main-banner-3.png" title="滿兩千送兩百 再送來店禮" width="100%">
                             </a>
                         </div>
                     </div>
