--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -105,7 +105,7 @@
                     <div class="main-title clearfix">
                         <div class="i-a">
                             <a href="/app/register">
-                                <img src="images/main-banner-0413.png" title="桃園市民卡－卡好女王節" width="100%">
+                                <img src="images/main-banner-0414.png" title="桃園市民卡－卡好女王節" width="100%">
                             </a>
                         </div>
                         <div class="i-b">
@@ -127,7 +127,7 @@
                                 <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
                                 <h5>活動簡介</h5>
                                 <p>歡慶母親節，市民卡要讓你買得優惠、買得愉快，盡情寵愛自己！
-                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/8－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
+                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/8－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額（共計72,000名）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                             </div>
                         </div>
                     </div>
@@ -202,15 +202,11 @@
                             <h5>活動時程</h5>
                             <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <th width="20%">開放登記</th>
-                                    <th width="20%">抽獎</th>
-                                    <th width="20%">名單公布</th>
-                                    <th width="20%">消費期間</th>
-                                    <th width="20%">消費回饋</th>
+                                    <th width="33%">開放登記</th>
+                                    <th width="33%">消費期間</th>
+                                    <th>消費回饋</th>
                                 </tr>
                                 <td align="center">4月18日（一）<br>至5月4日（三）</td>
-                                <td align="center">5月5日（四）</td>
-                                <td align="center">5月6日（五）</td>
                                 <td align="center">5月6日（五）<br>至6月5日（日）</td>
                                 <td align="center">七月底前</td>
                                 </tr>
@@ -231,13 +227,13 @@
                                     (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等。
                                     </td>
                                     <td align="center">
-                                        <span class="text-remark">一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值</span>
+                                        一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值
                                     </td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image2.png" target="_blank"><img class="img-card-example" src="images/image2.png" width="100%"></a>
+                                        <a href="images/image2-0414.png" target="_blank"><img class="img-card-example" src="images/image2-0414.png" width="100%"></a>
                                     </td>
                                     <td align="center">
                                         <a href="images/image4.png" target="_blank"><img class="img-card-example" src="images/image4.png" width="100%"></a>
@@ -339,16 +335,10 @@
                                     <p>百貨滿兩千送兩百禮券為「現金禮券」或「商品禮券」，類別將依各家業者提供為主，如使用「商品禮券」購物，等同兌換等值的商品而非購買，將無法取得營業人開立之統一發票。</p>
                                 </li>
                                 <li>
-                                    <p>依中華民國稅法規定，中獎贈品或獎金價值超過1,001元者，填發扣（免）繳憑單予中獎人，中獎人於年度報稅時必須計入個人所得合併申報。</p>
-                                </li>
-                                <li>
                                     <p>請確實登錄有效之資料與填寫正確個人資料，若登錄或個人資料填寫不實、錯誤、不完整、無法辨識、虛構、偽造、盜用等，視同自動放棄中獎資格。</p>
                                 </li>
                                 <li>
                                     <p>本活動之網路登入或有效紀錄，均以本府電腦系統之紀錄與認定為準。本府有權檢視各行為是否涉嫌人為操作，對於蓄意偽造、詐欺或為其他不正當交易，本府保有取消中獎資格之權利，並保留法律追訴權。</p>
-                                </li>
-                                <li>
-                                    <p>授權代領獎品，請受託人攜帶本人身分證正本、委託人之授權委託書（請註明代理事宜、委託人與受託人之姓名、身分證字號與相關個人資料，並請雙方親自簽名）至兌獎地點辦理代領事宜。</p>
                                 </li>
                                 <li>
                                     <p>活動辦法、中獎名單及相關事宜，請依本次活動網站公告為準，本府保有修正、補充說明、暫停或終止活動之權利，如有任何變更將公布於活動網站，恕不另行通知；其他未盡事宜，悉依本府相關規定或解釋辦理。</p>
