滿千折百活動登錄 - 登陸頁~更新說明文案

--- a/iiot/taoyuang1000/register/index-queen-keyin.html
+++ b/iiot/taoyuang1000/register/index-queen-keyin.html
@@ -21,8 +21,26 @@
                     <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <h1 class="maintitle">
-                    滿千折百活動登錄
+                    【三大支付 滿千送百】報名登記 
                 </h1>
+                <div class="top-notes mag-top">
+                    <h4>活動簡介</h4>
+                    <p>歡慶母親節，桃園市民卡聯合悠遊卡、一卡通、第一銀行，推出回饋總價值高達720萬的「消費滿千送百」超值活動，4/8－5/4至市民卡官方LINE註冊、登錄，即有機會抽中滿千送百回饋名額（共計72,000名）！</p>
+                    <br>
+                    <h4>活動步驟</h4>
+                    <ul class="nb-list">
+                        <li>於「桃園市民卡」官方LINE帳號完成註冊動作。</li>
+                        <li>4/18（一）至5/4（三）23:59，於本頁面登錄您所申辦的桃園市民卡搭載支付工具。</li>
+                        <li>5月初公告回饋名單，得獎者於公告日至6/5（日）前使用您登錄的支付工具（悠遊卡、一卡通MONEY、第一銀行信用卡），消費滿千即可於消費次月獲得百元回饋金。</li>
+                    </ul>
+                    <br>
+                    <h4>注意事項</h4>
+                    <ul class="nb-list">
+                        <li>「回饋名單公告」及「支付業者消費限制」等相關消息，請至<a href="https://taoyuan1000.tycg.gov.tw/" target="_blank">活動網頁</a>查看詳請。</li>
+                        <li>如需洽詢活動事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，或於上班時間（平日8:00-17:00）撥打客服專線03-3322107 由專人為您服務。</li>
+                        <li>卡務問題請撥打客服專線：悠遊卡（02-412-8880）、一卡通（07-791-2000）、第一銀行（02-2173-2999）。</li>
+                    </ul>
+                </div>
                 <form class="edit-userinfo">
                     <fieldset class="field">
                         <label for="firstName"><span>*</span>卡片類型</label> 
